# atutils.cpp

./: .travis.yml  CMakeLists.txt  README.md
atutils/core/: types.hpp
cmake/: util.cmake
src/: CMakeLists.txt
src/core/: CMakeLists.txt
src/core/test/: CMakeLists.txt  types.cpp
src/test_main/: CMakeLists.txt  main.cpp
